
=== Miscellaneous ===
 * Improved the computeCDF() method of Normal
 * Add HarrisonMcCabe, BreuschPagan and DurbinWatson tests to test homoskedasticity, autocorrelation of linear regression residuals
 * Add two samples Kolmogorov test
 * Improved the speed of many algorithms based on method binding
 * Added more options to control LHSExperiment and LowDiscrepancyExperiment

=== Bug fixes ===
 * #698 (KernelSmoothing() as a factory)
 * #813 (Error when multiplying a Matrix by a SymmetricMatrix)
 * #820 (Python distribution fails randomly when computing the PDF over a sample)
 * #822 (Incorect Matrix / point operations with cast)
 * #824 (Confusing behavior of NumericalSample::sort)
 * #837 (TruncatedDistribution::setParameter segfaults)
 * #838 (Symmetry of SymmetricMatrix not always enforced)

== 1.7 release (2016-01-27) == #release-1.7

=== Library ===

==== Major changes ====
 * Optimization API rework
 * New parametrization of covariance models
 * Changed behaviour of ExponentialCauchy
 * KrigingAlgorithm rework

==== New classes ====
 * OptimizationSolver, OptimizationProblem
 * SLSQP, LBFGS, NelderMead optimization algorithms from NLopt
 * DiracCovarianceModel, TensorizedCovarianceModel
 * HMatrixParameters: support class for HMat
 * KarhunenLoeveP1Factory: Karhunen-Loeve decomposition of a covariance model using a P1 Lagrange interpolation
 * GeneralizedLinearModelAlgorithm, GeneralizedLinearModelResult: estimate parameters of a generalized linear model
 * BipartiteGraph: red/black graph
 * CumulativeDistributionNetwork: high dimensional distribution using a collection of (usually) small dimension
   distributions and a bipartite graph describing the interactions between these distributions
 * AdaptiveStieltjesAlgorithm: orthonormal polynomials wrt arbitrary measures using adaptive integration
 * MaximumLikelihoodFactory: generic maximum likelihood distribution estimation service

==== API changes ====
 * Removed BoundConstrainedAlgorithm class